# shiftml

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  docs.yml  release.yml  tests.yml
docs/src/: conf.py
examples/: test_pred.ipynb
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
src/shiftml/: __init__.py
src/shiftml/ase/: calculator.py
src/shiftml/csp/: structure_pred.py
src/shiftml/utils/: calibrate.py  tensorial.py
tests/: test_ase.py  test_regression_pretrained.py
v0.1.0/: .buildinfo  genindex.html  index.html  py-modindex.html  reference.html  search.html
v0.1.0/_sources/: index.rst.txt
v0.1.0/html/: .buildinfo  genindex.html  index.html  py-modindex.html  searchindex.js
v0.1.0/html/_sources/: reference.rst.txt
v0.1.1/: .buildinfo  index.html
v0.1.1/html/: reference.html
