[project]
name = "shiftml"
version = "0.1.0"
requires-python = ">=3.9"
authors = [
]
dependencies = [
    "ase",
    "platformdirs",
    "metatensor-learn >=0.3.2,<0.4",
    "metatensor-operations >=0.3.3,<0.4",
    "metatensor-torch >=0.8", 
    "metatomic-torch >=0.1.2,<0.2",
    "vesin",
]

readme = "README.md"
license = {text = "BSD-3-Clause"}
description = "Predictions of chemical shieldings using machine learning"

[project.urls]
homepage = "https://github.com/lab-cosmo/ShiftML"
# documentation = "TODO"
repository = "https://github.com/lab-cosmo/ShiftML"



[build-system]
requires = [
    "setuptools >=68",
]
build-backend = "setuptools.build_meta"
